<resources>
    <string name="app_name">Skool</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_sign_in">Student Sign In</string>
    <string name="lecturer_sign_in">Lecturer Sign In</string>
    <string name="create_lecturer_account">Create Lecturer Account</string>
    <string name="sign_in_as_student">Sign in as Student</string>
    <string name="sign_in_as_lecturer">Sign in as Lecturer</string>
    <string name="create_student_account">Create Student Account</string>
    <string name="lecturer_sign_up">Lecturer Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="student_sign_up">Student Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_as_student">Sign up as Student</string>
    <string name="sign_up_as_lecturer">Sign up as Lecturer</string>
    <string name="profile_pic">profile</string>
    <string name="textview_1">TextView</string>
    <string name="textview_2">TextView</string>
    <string name="textview_3">TextView</string>
    <string name="button_1">Button</string>
    <string name="button_2">Button</string>
    <string name="mlogout">LogOut</string>
    <string name="textlec">This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n
        This is the Description of the lecture \n</string>
    <string name="qns">50 questions</string>
    <string name="ans">40 answer</string>
    <string name="ask_ic">ask_ic</string>
    <string name="tvtextview">I need help with this activity</string>
    <string name="comments">Comments</string>
    <string name="download_lecture">Download Lecture</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_lecture">No attachment uploaded</string>
    <string name="lecture_title">Lecture Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="save_lecture">Save Lecture</string>
    <string name="find_lecture_by_category">Find Lecture By Category</string>
    <string name="my_lectures">My Lectures</string>
    <string name="create_new_lecture">Create New Lecture</string>
    <string name="ooops_it_is_a_bit_lonely_here">Ooops! it is a bit lonely here…</string>
    <string name="load_lecture">Upload Lecture</string>
    <string name="no_lectures_for_this_category">No Lectures For This Category</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="post">post</string>
    <string name="upload_sucess_alert">attachment upload sucessful</string>
    <string name="upload_failure_alert">attachment upload failed</string>

    <string-array name="categories">
        <item>Science</item>
        <item>Engineering</item>
        <item>Medicine</item>
        <item>ICT</item>
        <item>Arts</item>
        <item>Social Sciences</item>
        <item>Business</item>
    </string-array>
</resources>