<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.StudentSignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/student_sign_up_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/student_sign_up_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_first_name" />



    <EditText
        android:id="@+id/student_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_last_name" />

    <EditText
        android:id="@+id/student_sign_up_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/student_sign_up_email"
        app:layout_constraintStart_toStartOf="@+id/student_sign_up_email"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_email" />

    <EditText
        android:id="@+id/student_sign_up_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/student_sign_up_email"
        app:layout_constraintStart_toStartOf="@+id/student_sign_up_email"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_password" />

    <Button
        android:id="@+id/student_sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/student_sign_up_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/student_sign_up_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_confirm_password" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/student_sign_up_password"
        app:layout_constraintTop_toBottomOf="@+id/student_sign_up_button" />

    <TextView
        android:id="@+id/sign_in_as_student_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_in_as_student"
        app:layout_constraintEnd_toEndOf="@+id/textview3"
        app:layout_constraintTop_toBottomOf="@+id/textview3" />

    <TextView
        android:id="@+id/sign_in_as_lecturer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_in_as_lecturer"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_as_student_tv"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_as_student_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>