<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Student_SignUp">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/heartbeat"
        android:layout_gravity="center"
        app:tint="@color/colorPrimary"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="50sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/studentEmailAddress"
            android:hint="@string/email_address"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/studentPassword"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/student_signup_marginTop"
            android:layout_marginLeft="@dimen/student_signup_marginLeft"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword"
            android:hint="@string/confirm_password"
            android:layout_marginTop="@dimen/student_signup_marginTop"
            android:layout_marginLeft="@dimen/student_signup_marginLeft"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/studentFirstName"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/student_signup_marginTop"
            android:layout_marginLeft="@dimen/student_signup_marginLeft"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/studentLastName"
            android:hint="@string/last_name"
            android:layout_marginTop="@dimen/student_signup_marginTop"
            android:layout_marginLeft="@dimen/student_signup_marginLeft"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student_signUp_button"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student_signup-login_Btn"
            android:text="Already a member? Login here"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:background="@color/transparent"
            android:layout_marginLeft="100dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/create_lecturer_account"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"/>
    </LinearLayout>

</RelativeLayout>