<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.AuthActivity">

    <Button
        android:id="@+id/sign_in_as_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in_as_student"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/sign_in_as_lecturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in_as_lecturer"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/sign_in_as_student"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/sign_in_as_student"
        app:layout_constraintTop_toBottomOf="@id/sign_in_as_student" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_as_lecturer"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_as_lecturer" />

    <TextView
        android:id="@+id/sign_up_as_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_up_as_student"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/sign_up_as_lecturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_lecturer"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_as_student"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_as_student" />

</androidx.constraintlayout.widget.ConstraintLayout>