<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LecturerSignInActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecturer_sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/lecturer_sign_in_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/lecturer_sign_in_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/lecturer_sign_in_email"
        app:layout_constraintStart_toStartOf="@+id/lecturer_sign_in_email"
        app:layout_constraintTop_toBottomOf="@+id/lecturer_sign_in_email" />

    <Button
        android:id="@+id/lecturer_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/lecturer_sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/lecturer_sign_in_password" />

    <TextView
        android:id="@+id/create_lecturer_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_lecturer_account"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/lecturer_sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/lecturer_sign_in_button" />

    <TextView
        android:id="@+id/sign_in_as_student_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_as_student"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/create_lecturer_account_tv"
        app:layout_constraintTop_toBottomOf="@+id/create_lecturer_account_tv" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="69dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_as_student_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>