<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/learner_name"
        android:layout_width="276dp"
        android:layout_height="32dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:text="Title Course" />

    <TextView
        android:id="@+id/learner_details"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:paddingStart="5dp"
        android:paddingRight="1dp"
        android:paddingLeft="1dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learner_name"
        tools:text="Course Category" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learner_details"
        app:srcCompat="@drawable/ic_ask"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/ask_ic" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="123dp"
        android:layout_height="19dp"
        android:text="@string/qns"
        app:layout_constraintBottom_toTopOf="@+id/learner_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/learner_name"
        app:layout_constraintTop_toBottomOf="@+id/learner_details" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
